# debugpy-mcp

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-12-dap-client.md
docs/superpowers/specs/: 2026-03-12-dap-client-design.md
src/debugpy_mcp/: dap.py  server.py
src/debugpy_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
